tests/cpp/internal/negative_case/static_assert_record_member_false.cpp
struct BadRecordStaticAssert {
    static_assert(false, "record member static_assert should fail");
};

int main() {
    return 0;
}
